feat: training + pipeline